# fractal-generator

./: .gitignore  LICENSE  README.md  pandoc.css  run_docs.sh  setup.cfg
doc/source/: conf.py  index.rst
fractal/: __main__.py  fractal.py
fractal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_plot.py
