[metadata]
name = fractal
author = Lucas Noronha
author_email = Lucas.Noronha-De-Oliveira-Alves@eleves.ec-nantes.fr
version = 1.0
license_file = LICENSE
license = MIT
description = A package to generate Mandelblots and Julias plot
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.12.2
install_requires = 
    numpy
    matplotlib
    sphinx
    myst-parser
    pytest
    sphinx-book-theme
    

[options.entry_points]
console_scripts =
    MandelbrotPlot=fractal.__main__:main
    JuliaPlot=fractal.__main__:main

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS